v1.13.x-SNAPSHOT/api-reference/data-assets/topics/versions.mdx
---
title: Topic Versions
description: List and retrieve historical versions of a topic
sidebarTitle: Topic Versions
api: GET /v1/topics/{id}/versions
---

# Topic Versions

Every change to a topic entity creates a new version. Use these endpoints to view the version history and retrieve specific versions.

## List Versions

<ParamField path="id" type="string" required>
  UUID of the topic.
</ParamField>

## Get Specific Version

Use `GET /v1/topics/{id}/versions/{version}` to retrieve a specific version.

<ParamField path="id" type="string" required>
  UUID of the topic.
</ParamField>

<ParamField path="version" type="string" required>
  Version number to retrieve (e.g., `0.2`).
</ParamField>

<RequestExample dropdown>
```python GET /v1/topics/{id}/versions
from metadata.generated.schema.entity.data.topic import Topic
from metadata.sdk import configure, client as sdk_client

configure(
    host="https://your-company.open-metadata.org/api",
    jwt_token="your-jwt-token"
)
ometa = sdk_client().ometa

# List all versions
history = ometa.get_list_entity_versions(
    entity=Topic,
    entity_id="0a021819-982e-4ee4-a5a2-4af30eaa3016",
)
for version in history.versions:
    print(f"Version: {version}")

# Get a specific version
topic_v1 = ometa.get_entity_version(
    entity=Topic,
    entity_id="0a021819-982e-4ee4-a5a2-4af30eaa3016",
    version="0.1",
)
print(f"Original description: {topic_v1.description}")
```

```java GET /v1/topics/{id}/versions
import static org.openmetadata.sdk.fluent.Topics.*;

// List all versions
var history = Topics.getVersions("0a021819-982e-4ee4-a5a2-4af30eaa3016");

for (var version : history.getVersions()) {
    System.out.println("Version: " + version);
}

// Get a specific version
var v1 = Topics.getSpecificVersion(
    "0a021819-982e-4ee4-a5a2-4af30eaa3016",
    0.1
);
System.out.println("Description: " + v1.getDescription());
```

```bash GET /v1/topics/{id}/versions
# List all versions
curl "{base_url}/api/v1/topics/0a021819-982e-4ee4-a5a2-4af30eaa3016/versions" \
  -H "Authorization: Bearer {access_token}"

# Get a specific version
curl "{base_url}/api/v1/topics/0a021819-982e-4ee4-a5a2-4af30eaa3016/versions/0.1" \
  -H "Authorization: Bearer {access_token}"
```
</RequestExample>

<ResponseExample>
```json Response (List Versions)
{
  "entityType": "topic",
  "versions": [
    "{\"id\":\"0a021819-982e-4ee4-a5a2-4af30eaa3016\",\"name\":\"address_book\",\"fullyQualifiedName\":\"sample_kafka.address_book\",\"version\":0.2,\"description\":\"Updated: All Protobuf record events captured with enhanced schema\",\"serviceType\":\"Kafka\"}",
    "{\"id\":\"0a021819-982e-4ee4-a5a2-4af30eaa3016\",\"name\":\"address_book\",\"fullyQualifiedName\":\"sample_kafka.address_book\",\"version\":0.1,\"description\":\"All Protobuf record related events gets captured in this topic\",\"serviceType\":\"Kafka\"}"
  ]
}
```
</ResponseExample>

---

## Returns

**List versions** returns an object with `entityType` and a `versions` array of serialized entity snapshots (newest first).

**Get specific version** returns the full topic object as it existed at that version.

---

## Error Handling

| Code | Error Type | Description |
|------|-----------|-------------|
| `401` | `UNAUTHORIZED` | Invalid or missing authentication token |
| `404` | `NOT_FOUND` | Topic or version does not exist |
